# SLEEFE

./: CMakeLists.txt  LICENSE  README.md
data/input/: example_01.bez  example_02.bez  example_03.bez  example_04.bez  example_05.bez  example_06.bez  example_07.bez  example_08.bez
doc/: .gitignore  CMakeLists.txt  config.dox
doc/src/: mainpage.dox  sections.dox
ide/VisualCode/: Makefile
ide/VisualStudio/sleefe/: sleefe.sln  sleefe.vcxproj  sleefe.vcxproj.filters
ide/VisualStudio/sleefe/sleefe-demo/: sleefe-demo.vcxproj  sleefe-demo.vcxproj.filters
ide/XCode/sleefe/sleefe.xcodeproj/: project.pbxproj
ide/XCode/sleefe/sleefe.xcodeproj/project.xcworkspace/xcuserdata/mfsiqueira.xcuserdatad/: UserInterfaceState.xcuserstate
ide/XCode/sleefe/sleefe.xcodeproj/xcshareddata/xcschemes/: sleefe-demo.xcscheme  sleefe.xcscheme
ide/XCode/sleefe/sleefe.xcodeproj/xcuserdata/mfsiqueira.xcuserdatad/xcschemes/: xcschememanagement.plist
scripts/: run_demo.sh
src/demo/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  Sleefe.hpp  UniSleefe.cpp  UniSleefe.hpp  UniSleefeBuilder.cpp  UniSleefeBuilder.hpp  UniSleefeTables.cpp
src/tst/: CMakeLists.txt  sleefetests.cpp
